--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -60,6 +60,13 @@
     <string name="qs_data_switch_changed_2">Wechsel die Daten SIM auf SIM 2.</string>
     <string name="qs_data_sim_none">Keine SIM-Karte</string>
 
+    <!-- Heads up QS tile -->
+    <string name="quick_settings_heads_up_label">Pop-up</string>
+    <string name="accessibility_quick_settings_heads_up_off">Pop-up aus.</string>
+    <string name="accessibility_quick_settings_heads_up_on">Pop-up an.</string>
+    <string name="accessibility_quick_settings_heads_up_changed_off">Pop-up ausgeschaltet.</string>
+    <string name="accessibility_quick_settings_heads_up_changed_on">Pop-up eingeschaltet.</string>
+
     <!-- Reader mode QS tile -->
     <string name="quick_settings_reading_mode">Lese-Modus</string>
     <string name="accessibility_quick_settings_reading_mode_on">Lesemodus an.</string>
