SystemUI: Add tile to show volume panel
Change-Id: Ic583c24e304d1edc903127237fc9eb5c7eeb7e4d

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -206,4 +206,7 @@
 
     <!-- Name of the clock in status bar [CHAR LIMIT=30] -->
     <string name="clock">Uhr</string>
+
+    <!-- Volume panel QS tile -->
+    <string name="quick_settings_volume_panel_label">Lautstärke</string>
 </resources>
