BatteryService: add dash charging support
Change-Id: I5e79f057b80276401beaa55018eb240fb454be18

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -255,4 +255,7 @@
       <item>org.pixelexperience.faceunlock</item>
   </string-array>
 
+  <!-- Whether device has dash charging support -->
+  <bool name="config_hasDashCharger">false</bool>
+
 </resources>
