--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -162,4 +162,7 @@
   <!-- Whether device has turbo power charging support -->
   <java-symbol type="bool" name="config_hasTurboPowerCharger" />
 
+  <!-- Sensor block -->
+  <java-symbol type="array" name="config_blockPackagesSensorDrain" />
+
 </resources>
