SystemUI: Introduce dynamic VoLTE & VoWiFi icons
wave edits:
- massive code cleanups, fixes, improvements
- add toggle to statusbar tuner

SKULSHADY: Update drawables from OnePlus 8 Pro

[cjh1249131356]: Adapt for A12.1

Co-authored-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Co-authored-by: Jyotiraditya Panda <jyotiraditya@aospa.co>
Change-Id: Iad808a404bb2c42c2fb2d228644f242ac26647ce
Signed-off-by: cjh1249131356 <cjh1249131356@gmail.com>

--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -130,6 +130,9 @@
     <!-- Name of the data saver status bar icon. -->
     <string name="status_bar_data_saver">Data saver</string>
 
+    <!-- Name of the VoLTE/VoWiFi icon. -->
+    <string name="status_bar_ims">VoLTE/VoWiFi</string>
+
     <!-- Poweroff/Reboot/Recovery QS tile -->
     <string name="quick_settings_poweroff_label">Power off</string>
     <string name="quick_settings_reboot_label">Reboot</string>
