SystemUI: Bringup statusbar icons tuner [1/2]
Based on the following changes:

Author: Steve Kondik <steve@cyngn.com>
Date:   Mon Sep 12 12:49:59 2016 -0700

    systemui: Enable navbar tuner

     * And add an action for it

    Change-Id: I23a51cc8e33f3498deec9ed60281423c66bbc4ca

Author: Steve Kondik <steve@cyngn.com>
Date:   Wed Sep 14 05:08:02 2016 -0700

    systemui: Fix a few issues with Tuner

     * Allow launching PreferenceScreens directly by setting the
       "tuner" extra to a valid key.
     * Remove the silly warning. There are no dragons here.
     * Move CM stuff to CM manifest.
     * Fix the ActionBar title when navigating.

    Change-Id: Ideac31dbfd71d7c0aa7fc3c20395c24128c598fc

Author: Joey Rizzoli <joey@cyanogenmoditalia.it>
Date:   Tue Nov 8 15:44:25 2016 +0100

    Tuner: allow power notif controls to be launched externally

    Change-Id: I8a9e1a2080640938c99125ab04986dfc99e004bf
    Signed-off-by: Joey Rizzoli <joey@cyanogenmoditalia.it>

Author: Gabriele M <moto.falcon.git@gmail.com>
Date:   Sat Sep 16 19:35:28 2017 +0200

    SystemUI: Revert some Tuner changes

    These changes were done to start the status bar tuner directly without
    showing the main Tuner screen. However, they negatively affect the
    management of the fragments. Revert them so that a different solution
    can be implemented in a follow-up change.

    This reverts the following commits:

     - 338de6728d8910d450f8962a44bbe69feba1ced4
       "Handle onOptionsItemSelected for TunerActivity"

     - b3eba6af8e3253efc1332b55821fd08e4fbf77b0
       "SystemUI: Remove nav bar and status bar options from SystemUI Tuner"

     - 82b9f95f761e7b5cc94ea2542b30460e48f8fb02 (partially)
       "systemui: Fix a few issues with Tuner"

    BUGBASH-661

    Change-Id: I35182248566ff31ed08d2836d66d5bd3f947ee9a

Author: Gabriele M <moto.falcon.git@gmail.com>
Date:   Sat Sep 16 19:35:38 2017 +0200

    SystemUI: Add separate pref screen for the status bar tuner

    Keep the st

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -60,4 +60,7 @@
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB-Tethering</string>
 
+    <!-- Title of statusbar tuner -->
+    <string name="status_bar_icons">Symbole in der Statusleiste</string>
+
 </resources>
