--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -164,4 +164,5 @@
 
     <!-- Sound Search tile -->
     <string name="quick_settings_sound_search">Musikerkennung</string>
+    <string name="quick_settings_sound_search_no_app">Entschuldigung, aber das funktioniert nicht, wenn Sie keine Musikerkennungsapp haben.</string>
 </resources>
