base: SystemUI: add qs AOD tile
Change-Id: I0d9948dbd48e309d8fcc9b2c33be8b17810dc5b0

--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -136,4 +136,7 @@
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
     <string name="quick_settings_reboot_bootloader_label">Bootloader</string>
 
+    <!-- AOD QS tile -->
+    <string name="quick_settings_aod_label">AOD</string>
+
 </resources>
