SystemUI: Extend reboot tile to add power off
SKULSHADY: Use MD2 icons

Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Change-Id: I329ce07cb69ee43cbe117a6c453faffa4555a08b
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -106,7 +106,8 @@
     <!-- Name of the data saver status bar icon. -->
     <string name="status_bar_data_saver">Datensparmodus</string>
 
-    <!-- Reboot/Recovery QS tile -->
+    <!-- Poweroff/Reboot/Recovery QS tile -->
+    <string name="quick_settings_poweroff_label">Ausschalten</string>
     <string name="quick_settings_reboot_label">Neustart</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
 
