--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -115,4 +115,8 @@
     <string name="quick_settings_aod_on_charge_label">AOD beim Laden</string>
     <string name="quick_settings_aod_off_label">AOD aus</string>
 
+    <!-- Kill button in notification guts -->
+    <string name="force_stop_dlg_title">Beenden erzwingen?</string>
+    <string name="force_stop_dlg_text">Das Beenden einer App zu erzwingen kann zu unerwünschtem Verhalten führen.</string>
+
 </resources>
