--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -329,4 +329,6 @@
   <!-- Enable face auth only when swiping security view -->
   <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 
+  <!-- Whether or not we should show vendor mismatch message -->
+  <bool name="config_show_vendor_mismatch_message">true</bool>
 </resources>
