SystemUI: QS: SoundTile: Don't toggle DND
* Allow Sound tile to toggle "Mute" instead of "DND" since we've DND Tile for DND work.

Change-Id: I3a1b03c9d1763602ed436233ba77045d35fd700c
Signed-off-by: Aman Singh <amankumarsingh1412@gmail.com>

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -187,7 +187,7 @@
     <string name="quick_settings_sound_label">Ton</string>
     <string name="quick_settings_sound_ring">Klingeln</string>
     <string name="quick_settings_sound_vibrate">Vibrieren</string>
-    <string name="quick_settings_sound_dnd">Bitte nicht stören</string>
+    <string name="quick_settings_sound_mute">Stumm</string>
 
     <!-- VPN QS tile -->
     <string name="quick_settings_vpn_label">VPN</string>
