[SQUASH] base: SystemUI: Introduce DataSwitchTile
* Based on OnePlus' OxygenOS tile, reworked to work with AOSP toggling without requirements on proprietary telephony-ext features

This is a squash of the following changes:

DataSwitchTile: Improve the code

* Get rid of deprecated AsyncTask
* Removed unused imports
* Finalize global vars
* Some other formatting and minor stuff

Change-Id: Id3e39c98dac6200301d15bf752f866f47875633d

SystemUI: DataSwitchTile: improve the code once again

* made the BroadcastReceiver private and final
* made the PhoneStateListener an anonymous inner class
* guard debug logs
* preloaded some strings and variables that are likely to be used over and over
* use the stream apis to handle subscription info list

Signed-off-by: jhonboy121 <alfredmathew05@gmail.com>

* @/jhonboy121: adapt to A12 and SysUIToast -> Toast

[Andrew Fluck <andrew@aospa.co>]
- Update SIMs QS icons

Co-authored-by: idoybh <idoybh2@gmail.com>
Co-authored-by: Andrew Fluck <andrew@aospa.co>
Change-Id: I430a06ab59740739c3074bc892f2eddc5998b23c

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -49,4 +49,11 @@
     <string name="accessibility_quick_settings_caffeine_off">Koffein aus</string>
     <string name="accessibility_quick_settings_caffeine_on">Koffein an</string>
 
+    <!-- DataSwitch Tile -->
+    <string name="qs_data_switch_label">Daten SIM wechseln</string>
+    <string name="qs_data_switch_toast_0">Derzeit ist keine SIM-Karte eingelegt</string>
+    <string name="qs_data_switch_toast_1">Derzeit ist nur eine SIM-Karte eingelegt</string>
+    <string name="qs_data_switch_changed_1">Wechsel die Daten SIM auf SIM 1.</string>
+    <string name="qs_data_switch_changed_2">Wechsel die Daten SIM auf SIM 2.</string>
+
 </resources>
