--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -330,5 +330,5 @@
   <bool name="config_faceAuthOnlyOnSecurityView">false</bool>
 
   <!-- Whether or not we should show vendor mismatch message -->
-  <bool name="config_show_vendor_mismatch_message">true</bool>
+  <bool name="config_show_vendor_mismatch_message">false</bool>
 </resources>
