--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -111,4 +111,8 @@
     <string name="quick_settings_reboot_label">Neustart</string>
     <string name="quick_settings_reboot_recovery_label">Recovery</string>
 
+    <!-- AOD QS tile -->
+    <string name="quick_settings_aod_on_charge_label">AOD beim Laden</string>
+    <string name="quick_settings_aod_off_label">AOD aus</string>
+
 </resources>
