--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -212,4 +212,8 @@
 
     <!-- DerpSpace Tile -->
     <string name="quick_derpspace_toast">LOL, you really thought that long click will take you somewhere!!!</string>
+
+    <!-- kill app api -->
+    <string name="task_helper_app_killed">%1$s zwangsweise beendet</string>
+    <string name="empty_app_killed">App</string>
 </resources>
