--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -209,4 +209,7 @@
 
     <!-- Volume panel QS tile -->
     <string name="quick_settings_volume_panel_label">Lautstärke</string>
+
+    <!-- DerpSpace Tile -->
+    <string name="quick_derpspace_toast">LOL, you really thought that long click will take you somewhere!!!</string>
 </resources>
