--- a/packages/SystemUI/res/values/derp_dimens.xml
+++ b/packages/SystemUI/res/values/derp_dimens.xml
@@ -57,4 +57,7 @@
     <dimen name="navigation_home_handle_width_medium">140dp</dimen>
     <dimen name="navigation_home_handle_width_long">170dp</dimen>
 
+    <!-- Screenrecord -->
+    <dimen name="screenrecord_dot_size">48dp</dimen>
+
 </resources>
