--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -216,4 +216,7 @@
     <!-- kill app api -->
     <string name="task_helper_app_killed">%1$s zwangsweise beendet</string>
     <string name="empty_app_killed">App</string>
+
+    <!-- Sleep Mode -->
+    <string name="quick_settings_sleep_mode_label">Schlafmodus</string>
 </resources>
