BatteryService: Add support for oem fast charger detection
Based on AOSPA fw/base 0af31949c69f7c306b49ecf2c25579300973fdc9
  - https://github.com/AOSPA/android_frameworks_base/commit/0af31949c69f7c306b49ecf2c25579300973fdc9

Allows to indicate, whether a device is charged using a
proprietary oem fast charge solution, which write their status
to sysfs.

The oem fast charge detection tries to be as generic as possible and is
configured via overlays.

Paths to sysfs to read status
  - core/res/res/values/aicp_config.xml
    - config_oemFastChargerStatusPaths

Change-Id: Ia91a9c3bb20967c5aac18c24ac7c2be10a0b8bf1
Signed-off-by: Alexander Martinz <alex@amartinz.at>

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -255,4 +255,8 @@
       <item>org.pixelexperience.faceunlock</item>
   </string-array>
 
+  <!-- Paths to fast charging status file to detect whether an oem fast charger is active -->
+  <string-array name="config_oemFastChargerStatusPaths" translatable="false">
+  </string-array>
+
 </resources>
