--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -196,4 +196,8 @@
     <string name="vpn_credentials_username">Benutzername</string>
     <string name="vpn_credentials_password">Passwort</string>
     <string name="vpn_credentials_dialog_connect">Verbinden</string>
+
+    <!-- Refresh Rate Tile -->
+    <string name="refresh_rate_tile_label">Aktualisierungsrate</string>
+    <string name="auto_mode_label">Auto</string>
 </resources>
