BiometricScheduler: Cancel operation if not idle
- some hals fail to report success/failure (for ex. realme fp hals)
[DarkJoker360 - Switch to overlays]

Change-Id: I442ce063280af36a04c25fcbc3dd45a90f196988
Signed-off-by: SagarMakhar <sagarmakhar@gmail.com>
Signed-off-by: DarkJoker360 <simoespo159@gmail.com>

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -318,4 +318,7 @@
   <!-- Default value for Horizon light color (Blue) -->
   <integer name="config_AmbientPulseLightColor">0x3980FF</integer>
 
+  <!-- Whether to cancel fingerprint operation if not idle -->
+  <bool name="config_fpCancelIfNotIdle">false</bool>
+
 </resources>
