--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -230,4 +230,7 @@
     <string name="turn_on_bluetooth">Bluetooth</string>
     <string name="bluetooth_is_off">Bluetooth ist ausgeschaltet</string>
     <string name="tap_a_device_to_connect">Auf ein Gerät tippen, um es zu verbinden</string>
+
+    <!-- Face Unlock -->
+    <string name="face_unlock_recognizing">Gesichtserkennung …</string>
 </resources>
