SystemUI: Add roaming indicator to statusbar tuner
Change-Id: I326e1d54019179f0505a558b7e57ab6a2479cdf2

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -63,4 +63,7 @@
     <!-- Title of statusbar tuner -->
     <string name="status_bar_icons">Symbole in der Statusleiste</string>
 
+    <!-- Name of the roaming status bar icon. -->
+    <string name="status_bar_roaming">Roaming-Indikator</string>
+
 </resources>
