--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -66,4 +66,7 @@
     <!-- Name of the roaming status bar icon. -->
     <string name="status_bar_roaming">Roaming-Indikator</string>
 
+    <!-- Name of the data saver status bar icon. -->
+    <string name="status_bar_data_saver">Datensparmodus</string>
+
 </resources>
