SystemUI: Add Autobrightness tile
[johnmart19]
 - Rework for A12.1 environment
 - Launch Display Settings on long click

Signed-off-by: Karan Parashar <whyredfire@gmail.com>
Change-Id: Id395f0da3fb4997d835d135b01707adada153ecd

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -200,4 +200,7 @@
     <!-- Refresh Rate Tile -->
     <string name="refresh_rate_tile_label">Aktualisierungsrate</string>
     <string name="auto_mode_label">Auto</string>
+
+    <!-- Autobrightness tile -->
+    <string name="quick_settings_autobrightness_label">Automatische Helligkeit</string>
 </resources>
