--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -68,10 +68,10 @@
     <string name="accessibility_quick_settings_reading_mode_changed_off">Lesemodus ausgeschaltet.</string>
 
     <!-- PowerShare QS tile -->
-    <string name="quick_settings_powershare_label">Wireless PowerShare</string>
-    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare aus\nEnergiesparmodus</string>
-    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare aus\nAkkustand zu niedrig</string>
-    <string name="quick_settings_powershare_enabled_label">Wireless PowerShare ist aktiviert</string>
+    <string name="quick_settings_powershare_label">Battery Share</string>
+    <string name="quick_settings_powershare_off_powersave_label">Battery Share aus\nEnergiesparmodus</string>
+    <string name="quick_settings_powershare_off_low_battery_label">Battery Share aus\nAkkustand zu niedrig</string>
+    <string name="quick_settings_powershare_enabled_label">Battery Share ist aktiviert</string>
 
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB-Tethering</string>
