--- a/packages/SystemUI/res/values/derp_strings.xml
+++ b/packages/SystemUI/res/values/derp_strings.xml
@@ -92,10 +92,10 @@
     <string name="accessibility_quick_settings_reading_mode_changed_off">Reading mode turned off.</string>
 
     <!-- PowerShare QS tile -->
-    <string name="quick_settings_powershare_label">Wireless PowerShare</string>
-    <string name="quick_settings_powershare_off_powersave_label">Wireless PowerShare off\nBattery saver</string>
-    <string name="quick_settings_powershare_off_low_battery_label">Wireless PowerShare off\nBattery too low</string>
-    <string name="quick_settings_powershare_enabled_label">Wireless PowerShare is enabled</string>
+    <string name="quick_settings_powershare_label">Battery Share</string>
+    <string name="quick_settings_powershare_off_powersave_label">Battery Share off\nBattery saver</string>
+    <string name="quick_settings_powershare_off_low_battery_label">Battery Share off\nBattery too low</string>
+    <string name="quick_settings_powershare_enabled_label">Battery Share is enabled</string>
 
     <!-- USB tethering QS tile -->
     <string name="quick_settings_usb_tether_label">USB tethering</string>
