--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -233,4 +233,7 @@
 
     <!-- Face Unlock -->
     <string name="face_unlock_recognizing">Gesichtserkennung …</string>
+
+    <!-- Google Lens Screenshot string -->
+    <string name="lens_unavailable">Google Lens ist nicht installiert</string>
 </resources>
