[SQUASH] base: Add option to cycle through ringer modes [1/2]
* Settings->System->Gestures->Prevent ringing

core: Remove @SystemApi annotation for VOLUME_HUSH_CYCLE.

  This addition should not be annotated with @SystemApi because it
  creates an addition that fails the API test in user builds

Signed-off-by: rituj <ritujbeniwal@gmail.com>
Co-authored-by: Evan Anderson <evananderson@aospa.co>
Change-Id: I334bd165e970665ac5300d387a0ea6745748d3ad

--- a/core/res/res/values/derp_symbols.xml
+++ b/core/res/res/values/derp_symbols.xml
@@ -130,4 +130,7 @@
   <!-- On-device lights (LED) capabilities -->
   <java-symbol type="integer" name="config_deviceLightCapabilities" />
 
+  <!-- Cycle through ringer modes -->
+  <java-symbol type="string" name="volume_dialog_ringer_guidance_normal" />
+
 </resources>
