core: Add config to control handling of audio direction changes.
Disabling this, brings back ringtone on some devices,
when establishing an IMS call.

Change-Id: I6038887ad4e6c2091cc7476a5ae67c0ba1f1c73a

--- a/core/res/res/values/derp_config.xml
+++ b/core/res/res/values/derp_config.xml
@@ -233,4 +233,7 @@
        pulsating and RGB control would set this config to 75. -->
   <integer name="config_deviceLightCapabilities">8</integer>
 
+  <!-- Wether to handle audio direction changes between major call states -->
+  <bool name="config_handleAudioDirectionChangesBetweenCallStateChanges">true</bool>
+
 </resources>
