--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -225,4 +225,9 @@
     <string name="quick_settings_preferred_network_lte">4G/LTE</string>
     <string name="quick_settings_preferred_network_nr">5G/NR</string>
     <string name="quick_settings_preferred_network_unsupported">Nicht unterstützt</string>
+
+    <!-- Bluetooth dialog -->
+    <string name="turn_on_bluetooth">Bluetooth</string>
+    <string name="bluetooth_is_off">Bluetooth ist ausgeschaltet</string>
+    <string name="tap_a_device_to_connect">Auf ein Gerät tippen, um es zu verbinden</string>
 </resources>
