DataSwitchTile: Show active mobile carrier in secodary label
* Convert the DataSwitchTile to use SignalState and get the active carrier name from that

Change-Id: I3459d6b33d99d943347d86575b55d67d49c020d9

--- a/packages/SystemUI/res/values-de/derp_strings.xml
+++ b/packages/SystemUI/res/values-de/derp_strings.xml
@@ -55,5 +55,6 @@
     <string name="qs_data_switch_toast_1">Derzeit ist nur eine SIM-Karte eingelegt</string>
     <string name="qs_data_switch_changed_1">Wechsel die Daten SIM auf SIM 1.</string>
     <string name="qs_data_switch_changed_2">Wechsel die Daten SIM auf SIM 2.</string>
+    <string name="qs_data_sim_none">Keine SIM-Karte</string>
 
 </resources>
